<resources>
    <string name="app_name">OrderingCoffee</string>
    <string name="facebook_app_id">186102645339113</string>
    <string name="fb_login_protocol_scheme">fb186102645339113</string>
    <string name="server_client_id">319718400159-4r3f3up2m1c7mpjva74ko193hqgv76e8.apps.googleusercontent.com</string>

    <string name="introduce_login1">Nhập số ĐT để nhận được mật khẩu.</string>
    <string name="introduce_login2">Ứng dụng sẽ tự động đăng nhập các lần tiếp theo.</string>
    <string name="policy">Tôi đã đọc và đồng ý với chính sách bảo mật</string>
    <string name="getPassWord">Lấy mật khẩu</string>
    <string name="fontArial">Arial</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="re_enter_password">Nhập lại mật khẩu</string>
    <string name="remember_password">Ghi nhớ đăng nhập</string>
    <string name="login">Đăng nhập</string>
    <string name="login_with_facebook">facebook</string>
    <string name="login_with_google">google</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="phone_or_mail">Số điện thoại hoặc email</string>
    <string name="next">Tiếp tục</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="reenter_new_password">Nhập lại mật khẩu mới</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="exit">Thoát</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="menu_shopping_cart">shopping cart</string>

    <!--title-->
    <string name="home">Trang chủ</string>
    <string name="category">Danh mục</string>
    <string name="menu">Thực đơn</string>
    <string name="recent_order">Lịch sử gọi món</string>
    <string name="profile">Thông tin cá nhân</string>

    <!--pop_back_stack-->
    <string name="food_page">foodpage</string>
    <string name="food_category_page">categoryfoodpage</string>

    <!--Error message-->
    <string name="invalid_code">Mã không hợp lệ</string>
    <string name="cannot_find_code">Không tìm thấy mã</string>
    <string name="cannot_find_category_food">can not find category food</string>
    <string name="no_connect">No internet connection! \nPlease check your connection!!!</string>
    <string name="connect_fail">Connect fail! please try again!</string>
    <string name="sign_up_fail">Fail to sign up, check information and try again</string>

    <!--message-->
    <string name="desciption_show">Description</string>

    <!--Control name-->
    <string name="book_now">Mua ngay</string>
    <string name="food_name">Tên món</string>
    <string name="food_price">giá tiền</string>
    <string name="food_description">mô tả</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    <string name="history_order">Order history</string>
    <string name="profile_navigation">Profile</string>
    <string name="checkin_navigation">Check-in</string>
    <string name="chat">Chat</string>
    <string name="log_out">Log out</string>

    <!--Sign-up Control-->
    <string name="continue_to_sign_up">Continue</string>
    <string name="sign_up">Sign Up</string>

    <!--shoping cart-->
    <string name="back_to_home">Back to home</string>
    <string name="quanlity">quanlity:</string>

    <!--Spinner-->
    <string name="choose_country">Country</string>
    <string name="choose_city">City</string>
    <string name="choose_district">District</string>
    <string name="choose_ward">ward</string>


</resources>
