<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="Home" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/time_history"
            android:title="@string/history_order" />
        <item
            android:id="@+id/nav_favorite_oder"
            android:icon="@drawable/heart"
            android:title="Favorite order" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile_navigation" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_checkin"
                android:icon="@drawable/facebook"
                android:title="@string/checkin_navigation" />
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/chat" />
            <item
                android:id="@+id/nav_send_fellback"
                android:icon="@drawable/feedback"
                android:title="feedback">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/exit"
        android:title="@string/log_out">
    </item>




</menu>
