<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tathao.orderingcoffee.view.Activity.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/size15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/fontArial"
                    android:hint="@string/username"
                    android:textColorHint="@color/colorHint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size20">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/fontArial"
                    android:hint="@string/phone_or_mail"
                    android:textColorHint="@color/colorHint" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size20"
                android:background="@drawable/backbround_button_white"
                android:fontFamily="@string/fontArial"
                android:text="@string/next" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size20"
                android:background="@drawable/backbround_button_white"
                android:fontFamily="@string/fontArial"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
