<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size15"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgFood_item_description"
                android:layout_width="@dimen/size100"
                android:layout_height="@dimen/size100"
                android:background="@drawable/image_food"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvNameFood_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:layout_marginLeft="@dimen/size15"
                android:textSize="@dimen/size20"/>
            <TextView
                android:id="@+id/tvPriceFood_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_price"
                android:textColor="@color/colorRed"
                android:layout_marginLeft="@dimen/size15"
                android:layout_marginTop="@dimen/size10"
                android:textSize="@dimen/size15"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size15"
        android:layout_marginRight="@dimen/size15"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size200">

            <TextView
                android:id="@+id/tvDescription_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_description" />

        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size15"
            android:orientation="horizontal">


            <com.travijuu.numberpicker.library.NumberPicker
                android:id="@+id/number_picker_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/size15">

            </com.travijuu.numberpicker.library.NumberPicker>

            <Button
                android:id="@+id/btnAdd_item_description"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/size15"
                android:background="@drawable/background_button_add_food"
                android:text="@string/add"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>